--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,62 +9,24 @@ on:
       - '*'
 
 jobs:
-  test-lt-elixir-1-8:
+  test:
     runs-on: ubuntu-latest
     name: OTP ${{matrix.otp}} / Elixir ${{matrix.elixir}}
 
     strategy:
       matrix:
-        otp: [21.x, 22.x]
-        elixir: [1.7.x]
+        otp: [22.x, 23.x, 24.x]
+        elixir: [1.11.x, 1.12.x, 1.13.x]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2.3.5
 
-      - uses: actions/setup-elixir@v1.5
+      - uses: erlef/setup-elixir@v1.9
         with:
           otp-version: ${{matrix.otp}}
           elixir-version: ${{matrix.elixir}}
 
-      - name: Cache Dependencies
-        uses: actions/cache@v2
-        with:
-          path: |
-            deps
-            _build/dev
-            _build/test
-          key: elixir-cache-${{secrets.CACHE_VERSION}}-${{matrix.elixir}}-otp-${{matrix.otp}}-${{runner.os}}-${{hashFiles('mix.lock')}}-${{github.ref}}
-          restore-keys: |
-            elixir-cache-${{secrets.CACHE_VERSION}}-${{matrix.elixir}}-otp-${{matrix.otp}}-${{runner.os}}-${{hashFiles('mix.lock')}}-
-            elixir-cache-${{secrets.CACHE_VERSION}}-${{matrix.elixir}}-otp-${{matrix.otp}}-${{runner.os}}-
-
-      - name: Install Dependencies
-        run: mix deps.get
-
-      - name: Test
-        run: mix test
-
-      - name: Dialyzer
-        run: mix dialyzer
-
-  test-gte-elixir-1-8:
-    runs-on: ubuntu-latest
-    name: OTP ${{matrix.otp}} / Elixir ${{matrix.elixir}}
-
-    strategy:
-      matrix:
-        otp: [21.x, 22.x, 23.x]
-        elixir: [1.8.x, 1.9.x, 1.10.x, 1.11.x]
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - uses: actions/setup-elixir@v1.5
-        with:
-          otp-version: ${{matrix.otp}}
-          elixir-version: ${{matrix.elixir}}
-
-      - name: Cache Dependencies
+      - name: Cache Elixir
         uses: actions/cache@v2
         with:
           path: |
